# final_sem_project

./: .gitignore
backend/: main.py  mental_health.db  pyproject.toml  requirements.txt
backend/user_profiles/: db_user_1.json  db_user_3.json  db_user_6.json  user_03jgis7s4.json  user_0wli5a8ov.json  user_2mh2ni845.json  user_3v19zf0kh.json  user_518k9f2kx.json  user_6l5aw8ijj.json  user_6vem9x2bw.json  user_78r4zodlu.json  user_e9kxjln1h.json  user_g70oe4cti.json  user_lpmd1t0rw.json  user_lvpn63npc.json  user_mhslnj245.json  user_mmn6mrsob.json  user_n8b51vx2p.json  user_nodrd1soa.json  user_nom8b8z2b.json  user_t1fwxvnnw.json  user_u4e4m2fbr.json  user_wnsl4wu3z.json  user_wwo4e0fhk.json  user_xygbvioe7.json
backend/user_tasks/: db_user_2.json
frontend/: package-lock.json  tailwind.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: AdminPortal.jsx  MentalHealthAgent.jsx
frontend/src/pages/: Admin.jsx  Home.jsx
