[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "chromadb>=1.4.0",
    "deepface>=0.0.99",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "indic-nlp-library>=0.92",
    "indictranstoolkit>=1.1.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "mosestokenizer>=1.2.1",
    "numpy>=2.4.0",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sacremoses>=0.1.1",
    "scipy>=1.16.3",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.45",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trustcall>=0.0.39",
    "uvicorn[standard]>=0.40.0",
]
